force-app/main/default/objects/Account/fields/Admitting_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Admitting_Consultant__c</fullName>
    <label>Admitting Consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>