force-app/main/default/objects/Account/fields/Admitting_Doctors_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Admitting_Doctors_Speciality__c</fullName>
    <label>Admitting Doctors Speciality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>