force-app/main/default/objects/Account/fields/Expected_Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Expected_Length_of_Stay__c</fullName>
    <label>Expected Length of Stay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>