force-app/main/default/objects/Account/fields/Opt_out_of_E_marketing_Communications__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_of_E_marketing_Communications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt out of E-marketing Communications</label>
    <type>Checkbox</type>
</CustomField>