force-app/main/default/objects/Account/fields/Primary_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Primary_Speciality__c</fullName>
    <label>Primary Speciality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>