force-app/main/default/objects/Account/fields/Relation_to_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Relation_to_Emergency_Contact__c</fullName>
    <label>Relation (to Emergency Contact)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>